// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`SortableTable > should render correctly 1`] = `
<DocumentFragment>
  <table
    class="govuk-table"
  >
    <thead
      class="govuk-table__head"
    >
      <tr
        class="govuk-table__row"
      >
        <th
          class="govuk-table__header align-middle px-2 "
          scope="col"
        >
          ID
        </th>
        <th
          class="govuk-table__header align-middle px-2 "
          scope="col"
        >
          Name
        </th>
        <th
          class="govuk-table__header align-middle px-2 "
          scope="col"
        >
          <div
            class="flex flex-row items-center"
          >
            Start
            <div
              class="flex flex-col pl-1 text-arrow"
            >
              <span
                class="-mb-1"
              >
                ▲
              </span>
              <span>
                ▼
              </span>
            </div>
          </div>
        </th>
        <th
          class="govuk-table__header align-middle px-2 "
          scope="col"
        >
          <div
            class="flex flex-row items-center"
          >
            Role
            <div
              class="flex flex-col pl-1 text-arrow"
            >
              <span
                class="-mb-1"
              >
                ▲
              </span>
              <span>
                ▼
              </span>
            </div>
          </div>
        </th>
      </tr>
    </thead>
    <tbody
      class="govuk-table__body"
    >
      <tr
        class="govuk-table__row"
      >
        <td
          class="govuk-table__cell align-middle px-2"
        >
          <a
            class="govuk-link"
            href="/disruption-detail/id?return=%2Fview-all-disruptions"
          >
            aft62h
          </a>
        </td>
        <td
          class="govuk-table__cell align-middle px-2"
        >
          Random name1
        </td>
        <td
          class="govuk-table__cell align-middle px-2"
        >
          25/03/2023
        </td>
        <td
          class="govuk-table__cell align-middle px-2"
        >
          Engineer
        </td>
      </tr>
      <tr
        class="govuk-table__row"
      >
        <td
          class="govuk-table__cell align-middle px-2"
        >
          <a
            class="govuk-link"
            href="/disruption-detail/id?return=%2Fview-all-disruptions"
          >
            aft62h
          </a>
        </td>
        <td
          class="govuk-table__cell align-middle px-2"
        >
          Random name4
        </td>
        <td
          class="govuk-table__cell align-middle px-2"
        >
          25/03/2023
        </td>
        <td
          class="govuk-table__cell align-middle px-2"
        >
          Architect
        </td>
      </tr>
      <tr
        class="govuk-table__row"
      >
        <td
          class="govuk-table__cell align-middle px-2"
        >
          <a
            class="govuk-link"
            href="/disruption-detail/id?return=%2Fview-all-disruptions"
          >
            aft62h
          </a>
        </td>
        <td
          class="govuk-table__cell align-middle px-2"
        >
          Random name2
        </td>
        <td
          class="govuk-table__cell align-middle px-2"
        >
          20/04/2023
        </td>
        <td
          class="govuk-table__cell align-middle px-2"
        >
          Engineer
        </td>
      </tr>
      <tr
        class="govuk-table__row"
      >
        <td
          class="govuk-table__cell align-middle px-2"
        >
          <a
            class="govuk-link"
            href="/disruption-detail/id?return=%2Fview-all-disruptions"
          >
            aft62h
          </a>
        </td>
        <td
          class="govuk-table__cell align-middle px-2"
        >
          Random name3
        </td>
        <td
          class="govuk-table__cell align-middle px-2"
        >
          25/03/2024
        </td>
        <td
          class="govuk-table__cell align-middle px-2"
        >
          Director
        </td>
      </tr>
    </tbody>
  </table>
</DocumentFragment>
`;

exports[`SortableTable > should render correctly when empty arrays are passed 1`] = `
<DocumentFragment>
  <table
    class="govuk-table"
  >
    <thead
      class="govuk-table__head"
    >
      <tr
        class="govuk-table__row"
      />
    </thead>
    <tbody
      class="govuk-table__body"
    />
  </table>
</DocumentFragment>
`;

exports[`SortableTable > should render correctly with pagination 1`] = `
<DocumentFragment>
  <table
    class="govuk-table"
  >
    <thead
      class="govuk-table__head"
    >
      <tr
        class="govuk-table__row"
      >
        <th
          class="govuk-table__header align-middle px-2 "
          scope="col"
        >
          ID
        </th>
        <th
          class="govuk-table__header align-middle px-2 "
          scope="col"
        >
          Name
        </th>
        <th
          class="govuk-table__header align-middle px-2 "
          scope="col"
        >
          <div
            class="flex flex-row items-center"
          >
            Start
            <div
              class="flex flex-col pl-1 text-arrow"
            >
              <span
                class="-mb-1"
              >
                ▲
              </span>
              <span>
                ▼
              </span>
            </div>
          </div>
        </th>
        <th
          class="govuk-table__header align-middle px-2 "
          scope="col"
        >
          <div
            class="flex flex-row items-center"
          >
            Role
            <div
              class="flex flex-col pl-1 text-arrow"
            >
              <span
                class="-mb-1"
              >
                ▲
              </span>
              <span>
                ▼
              </span>
            </div>
          </div>
        </th>
      </tr>
    </thead>
    <tbody
      class="govuk-table__body"
    >
      <tr
        class="govuk-table__row"
      >
        <td
          class="govuk-table__cell align-middle px-2"
        >
          <a
            class="govuk-link"
            href="/disruption-detail/id?return=%2Fview-all-disruptions"
          >
            aft62h
          </a>
        </td>
        <td
          class="govuk-table__cell align-middle px-2"
        >
          Random name1
        </td>
        <td
          class="govuk-table__cell align-middle px-2"
        >
          25/03/2023
        </td>
        <td
          class="govuk-table__cell align-middle px-2"
        >
          Engineer
        </td>
      </tr>
      <tr
        class="govuk-table__row"
      >
        <td
          class="govuk-table__cell align-middle px-2"
        >
          <a
            class="govuk-link"
            href="/disruption-detail/id?return=%2Fview-all-disruptions"
          >
            aft62h
          </a>
        </td>
        <td
          class="govuk-table__cell align-middle px-2"
        >
          Random name4
        </td>
        <td
          class="govuk-table__cell align-middle px-2"
        >
          25/03/2023
        </td>
        <td
          class="govuk-table__cell align-middle px-2"
        >
          Architect
        </td>
      </tr>
      <tr
        class="govuk-table__row"
      >
        <td
          class="govuk-table__cell align-middle px-2"
        >
          <a
            class="govuk-link"
            href="/disruption-detail/id?return=%2Fview-all-disruptions"
          >
            aft62h
          </a>
        </td>
        <td
          class="govuk-table__cell align-middle px-2"
        >
          Random name2
        </td>
        <td
          class="govuk-table__cell align-middle px-2"
        >
          20/04/2023
        </td>
        <td
          class="govuk-table__cell align-middle px-2"
        >
          Engineer
        </td>
      </tr>
      <tr
        class="govuk-table__row"
      >
        <td
          class="govuk-table__cell align-middle px-2"
        >
          <a
            class="govuk-link"
            href="/disruption-detail/id?return=%2Fview-all-disruptions"
          >
            aft62h
          </a>
        </td>
        <td
          class="govuk-table__cell align-middle px-2"
        >
          Random name3
        </td>
        <td
          class="govuk-table__cell align-middle px-2"
        >
          25/03/2024
        </td>
        <td
          class="govuk-table__cell align-middle px-2"
        >
          Director
        </td>
      </tr>
    </tbody>
  </table>
  <nav
    class="govuk-pagination justify-center"
  >
    <ul
      class="govuk-pagination__list"
    >
       
      <li
        class="govuk-pagination__item govuk-pagination__item--current"
      >
        <a
          aria-label="Page 1"
          class="govuk-link govuk-pagination__link"
          data-module="govuk-button"
          draggable="false"
          href="#"
          role="button"
        >
          1 
        </a>
      </li>
      <li
        class="govuk-pagination__item"
      >
        <a
          aria-label="Page 2"
          class="govuk-link govuk-pagination__link"
          data-module="govuk-button"
          draggable="false"
          href="#"
          role="button"
        >
          2 
        </a>
      </li>
      <li
        class="govuk-pagination__item"
      >
        <a
          aria-label="Page 3"
          class="govuk-link govuk-pagination__link"
          data-module="govuk-button"
          draggable="false"
          href="#"
          role="button"
        >
          3 
        </a>
      </li>
      <li
        class="govuk-pagination__item"
      >
        <a
          aria-label="Page 4"
          class="govuk-link govuk-pagination__link"
          data-module="govuk-button"
          draggable="false"
          href="#"
          role="button"
        >
          4 
        </a>
      </li>
    </ul>
    <div
      class="govuk-pagination__next"
    >
      <a
        aria-label="Page 4"
        class="govuk-link govuk-pagination__link"
        data-module="govuk-button"
        draggable="false"
        href=""
        rel="next"
        role="button"
      >
        <span
          class="govuk-pagination__link-title"
        >
          Next
        </span>
         
        <svg
          aria-hidden="true"
          class="govuk-pagination__icon govuk-pagination__icon--next"
          focusable="false"
          height="13"
          viewBox="0 0 15 13"
          width="15"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="m8.107-0.0078125-1.4136 1.414 4.2926 4.293h-12.986v2h12.896l-4.1855 3.9766 1.377 1.4492 6.7441-6.4062-6.7246-6.7266z"
          />
        </svg>
      </a>
    </div>
  </nav>
</DocumentFragment>
`;

exports[`SortableTable > should render correctly with sorted field 1`] = `
<DocumentFragment>
  <table
    class="govuk-table"
  >
    <thead
      class="govuk-table__head"
    >
      <tr
        class="govuk-table__row"
      >
        <th
          class="govuk-table__header align-middle px-2 "
          scope="col"
        >
          ID
        </th>
        <th
          class="govuk-table__header align-middle px-2 "
          scope="col"
        >
          Name
        </th>
        <th
          class="govuk-table__header align-middle px-2 "
          scope="col"
        >
          <div
            class="flex flex-row items-center"
          >
            Start
            <span
              class="pl-1 govuk-!-font-size-14"
            >
              ▲
            </span>
          </div>
        </th>
        <th
          class="govuk-table__header align-middle px-2 "
          scope="col"
        >
          <div
            class="flex flex-row items-center"
          >
            Role
            <div
              class="flex flex-col pl-1 text-arrow"
            >
              <span
                class="-mb-1"
              >
                ▲
              </span>
              <span>
                ▼
              </span>
            </div>
          </div>
        </th>
      </tr>
    </thead>
    <tbody
      class="govuk-table__body"
    >
      <tr
        class="govuk-table__row"
      >
        <td
          class="govuk-table__cell align-middle px-2"
        >
          <a
            class="govuk-link"
            href="/disruption-detail/id?return=%2Fview-all-disruptions"
          >
            aft62h
          </a>
        </td>
        <td
          class="govuk-table__cell align-middle px-2"
        >
          Random name1
        </td>
        <td
          class="govuk-table__cell align-middle px-2"
        >
          25/03/2023
        </td>
        <td
          class="govuk-table__cell align-middle px-2"
        >
          Engineer
        </td>
      </tr>
      <tr
        class="govuk-table__row"
      >
        <td
          class="govuk-table__cell align-middle px-2"
        >
          <a
            class="govuk-link"
            href="/disruption-detail/id?return=%2Fview-all-disruptions"
          >
            aft62h
          </a>
        </td>
        <td
          class="govuk-table__cell align-middle px-2"
        >
          Random name4
        </td>
        <td
          class="govuk-table__cell align-middle px-2"
        >
          25/03/2023
        </td>
        <td
          class="govuk-table__cell align-middle px-2"
        >
          Architect
        </td>
      </tr>
      <tr
        class="govuk-table__row"
      >
        <td
          class="govuk-table__cell align-middle px-2"
        >
          <a
            class="govuk-link"
            href="/disruption-detail/id?return=%2Fview-all-disruptions"
          >
            aft62h
          </a>
        </td>
        <td
          class="govuk-table__cell align-middle px-2"
        >
          Random name2
        </td>
        <td
          class="govuk-table__cell align-middle px-2"
        >
          20/04/2023
        </td>
        <td
          class="govuk-table__cell align-middle px-2"
        >
          Engineer
        </td>
      </tr>
      <tr
        class="govuk-table__row"
      >
        <td
          class="govuk-table__cell align-middle px-2"
        >
          <a
            class="govuk-link"
            href="/disruption-detail/id?return=%2Fview-all-disruptions"
          >
            aft62h
          </a>
        </td>
        <td
          class="govuk-table__cell align-middle px-2"
        >
          Random name3
        </td>
        <td
          class="govuk-table__cell align-middle px-2"
        >
          25/03/2024
        </td>
        <td
          class="govuk-table__cell align-middle px-2"
        >
          Director
        </td>
      </tr>
    </tbody>
  </table>
  <nav
    class="govuk-pagination justify-center"
  >
    <ul
      class="govuk-pagination__list"
    >
       
      <li
        class="govuk-pagination__item govuk-pagination__item--current"
      >
        <a
          aria-label="Page 1"
          class="govuk-link govuk-pagination__link"
          data-module="govuk-button"
          draggable="false"
          href="#"
          role="button"
        >
          1 
        </a>
      </li>
      <li
        class="govuk-pagination__item"
      >
        <a
          aria-label="Page 2"
          class="govuk-link govuk-pagination__link"
          data-module="govuk-button"
          draggable="false"
          href="#"
          role="button"
        >
          2 
        </a>
      </li>
      <li
        class="govuk-pagination__item"
      >
        <a
          aria-label="Page 3"
          class="govuk-link govuk-pagination__link"
          data-module="govuk-button"
          draggable="false"
          href="#"
          role="button"
        >
          3 
        </a>
      </li>
      <li
        class="govuk-pagination__item"
      >
        <a
          aria-label="Page 4"
          class="govuk-link govuk-pagination__link"
          data-module="govuk-button"
          draggable="false"
          href="#"
          role="button"
        >
          4 
        </a>
      </li>
    </ul>
    <div
      class="govuk-pagination__next"
    >
      <a
        aria-label="Page 4"
        class="govuk-link govuk-pagination__link"
        data-module="govuk-button"
        draggable="false"
        href=""
        rel="next"
        role="button"
      >
        <span
          class="govuk-pagination__link-title"
        >
          Next
        </span>
         
        <svg
          aria-hidden="true"
          class="govuk-pagination__icon govuk-pagination__icon--next"
          focusable="false"
          height="13"
          viewBox="0 0 15 13"
          width="15"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="m8.107-0.0078125-1.4136 1.414 4.2926 4.293h-12.986v2h12.896l-4.1855 3.9766 1.377 1.4492 6.7441-6.4062-6.7246-6.7266z"
          />
        </svg>
      </a>
    </div>
  </nav>
</DocumentFragment>
`;
